Bug 402088 - Can't list all devices with CLI
Summary: Can't list all devices with CLI
Status: RESOLVED FIXED
Alias: None
Product: kdeconnect
Classification: Applications
Component: common (other bugs)
Version First Reported In: 1.3.3
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Albert Vaca Cintora
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-13 11:59 UTC by Damien Cassou
Modified: 2019-03-23 21:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Damien Cassou 2018-12-13 11:59:54 UTC
SUMMARY

My Fedora workstation is in a network with 3 other devices using KDEConnect. The 3 can see each other. They can also see my Fedora workstation.

Problem is: `kdeconnect-cli -l` can't see any unpaired device. As soon as a device is paired, it appears in `kdeconnect-cli -l` results.

STEPS TO REPRODUCE
1. kdeconnect-cli --list-devices (or --list-available)

OBSERVED RESULT

0 device found

EXPECTED RESULT

3 devices found


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 29, KDE not installed (except kdeconnect dependencies)
Comment 1 Nicolas Fella 2018-12-25 00:38:26 UTC
Git commit 6262c09de8e6a8de11cc8c1105bfa9a79176baba by Nicolas Fella.
Committed on 25/12/2018 at 00:38.
Pushed by nicolasfella into branch 'master'.

[cli] Show all reachable devices

Summary:
Devices that were reachable but not paired were not shown. This makes it impossible to initiate paring

Test Plan:
Have a unpaired device reachable. Without the patch kdeconnect-cli -l does not show it. With the patch it is shown

Reviewers: #kde_connect, albertvaka

Reviewed By: #kde_connect, albertvaka

Subscribers: kdeconnect

Tags: #kde_connect

Differential Revision: https://phabricator.kde.org/D17788

M  +2    -2    cli/kdeconnect-cli.cpp

https://commits.kde.org/kdeconnect-kde/6262c09de8e6a8de11cc8c1105bfa9a79176baba
Comment 2 Nicolas Fella 2019-03-23 21:14:18 UTC
Git commit a4aef73312f5c7e4a1a24bfdc9ba3e749575a966 by Nicolas Fella.
Committed on 23/03/2019 at 21:13.
Pushed by nicolasfella into branch '1.x'.

[cli] Show all reachable devices

Summary:
Devices that were reachable but not paired were not shown. This makes it impossible to initiate paring

Test Plan:
Have a unpaired device reachable. Without the patch kdeconnect-cli -l does not show it. With the patch it is shown

Reviewers: #kde_connect, albertvaka

Reviewed By: #kde_connect, albertvaka

Subscribers: kdeconnect

Tags: #kde_connect

Differential Revision: https://phabricator.kde.org/D17788

M  +2    -2    cli/kdeconnect-cli.cpp

https://invent.kde.org/kde/kdeconnect-kde/commit/a4aef73312f5c7e4a1a24bfdc9ba3e749575a966